--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
+  easy_onboard: ^1.0.2
   flutter:
     sdk: flutter
   flutter_localizations:
